--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --require @babel/register",
     "lint": "eslint ./",
     "prettier": "prettier --write src/**/*.js",
-    "doc": "jsdoc src/index.js"
+    "doc": "jsdoc src/index.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,8 @@
     "chai": "^4.2.0",
     "eslint": "^8.1.0",
     "mocha": "^6.2.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "jsdoc": "^3.6.7"
